# multicam_view

./: .gitignore  README.md  TESTING.md  calculate_wb_gains.py  cam.py  cam_simplified.py  camera_manager.py  multicam_access.md  project_description.md  pyproject.toml  pytest.ini  run.py  run_simplified.py  run_test.sh  run_tests.py  run_tests.sh  run_watchdog.sh  start.sh  stop.sh  test_camera.py  test_capture.py  watchdog.sh
docs/: architecture.md  cleanup_plan.md  multicam_access.md  progress_20250407_captureTrouble.md  progress_20250407_firstImp.md  progress_20250407_fixedCapture.md  progress_20250407_streamUpdate.md  project_description.md  todo_0407.md
templates/: bak_index.html  debug_ajax.html  debug_index.html  index.html
tests/: conftest.py  test_camera_manager.py  test_flask_app.py
